// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hoc array of codes should not print absolute route -child- 1`] = `<div />`;

exports[`hoc array of codes should print absolute route -strict equality- 1`] = `
<div>
  <div>
    Absolute component
  </div>
</div>
`;

exports[`hoc array of codes should print relative route -child- 1`] = `
<div>
  <div>
    Relative component
  </div>
</div>
`;

exports[`hoc array of codes should print relative route -strict equality- 1`] = `
<div>
  <div>
    Relative component
  </div>
</div>
`;

exports[`hoc uniq code (string) should not print absolute route -child- 1`] = `<div />`;

exports[`hoc uniq code (string) should print absolute route -strict equality- 1`] = `
<div>
  <div>
    Absolute component
  </div>
</div>
`;

exports[`hoc uniq code (string) should print relative route -child- 1`] = `
<div>
  <div>
    Relative component
  </div>
</div>
`;

exports[`hoc uniq code (string) should print relative route -strict equality- 1`] = `
<div>
  <div>
    Relative component
  </div>
</div>
`;
